better parser error messages

--- a/files/grammar/mahdl.properties
+++ b/files/grammar/mahdl.properties
@@ -13,4 +13,59 @@ psi.utilClass: name.martingeisse.mahdl.plugin.input.psi.PsiUtil
 # psi.supports.safeDelete: TerminalDeclaration, Production
 context.parserDefinitionClass: name.martingeisse.mahdl.plugin.input.MahdlParserDefinition
 
-# parser.error.KW_TERMINALS: %terminals
+parser.error.OPENING_PARENTHESIS: (
+parser.error.CLOSING_PARENTHESIS: )
+parser.error.OPENING_SQUARE_BRACKET: [
+parser.error.CLOSING_SQUARE_BRACKET: ]
+parser.error.OPENING_CURLY_BRACE: {
+parser.error.CLOSING_CURLY_BRACE: }
+   
+parser.error.DOT: .
+parser.error.COLON: :
+parser.error.SEMICOLON: ;
+parser.error.COMMA: ,
+parser.error.EQUALS: =
+
+parser.error.OP_NOT: ~
+parser.error.OP_AND: &
+parser.error.OP_OR: |
+parser.error.OP_XOR: ^
+parser.error.OP_SHIFT_LEFT: <<
+parser.error.OP_SHIFT_RIGHT: >>
+parser.error.OP_PLUS: +
+parser.error.OP_MINUS: -
+parser.error.OP_TIMES: *
+parser.error.OP_DIVIDED_BY: /
+parser.error.OP_REMAINDER: %
+parser.error.OP_EQUAL: ==
+parser.error.OP_NOT_EQUAL: !=
+parser.error.OP_GREATER_THAN: >
+parser.error.OP_GREATER_THAN_OR_EQUAL: >=
+parser.error.OP_LESS_THAN: <
+parser.error.OP_LESS_THAN_OR_EQUAL: <=
+parser.error.OP_MUX: ?
+parser.error.OP_CONCAT: _
+
+parser.error.KW_MODULE: module
+parser.error.KW_INTERFACE: interface
+parser.error.KW_CONST: const
+parser.error.KW_INPUT: input
+parser.error.KW_OUTPUT: output
+parser.error.KW_INOUT: inout
+parser.error.KW_BIT: bit
+parser.error.KW_VECTOR: vector
+parser.error.KW_MEMORY: memory
+parser.error.KW_INTEGER: integer
+parser.error.KW_TEXT: text
+parser.error.KW_DO: do
+parser.error.KW_IF: if
+parser.error.KW_ELSE: else
+parser.error.KW_SWITCH: switch
+parser.error.KW_CASE: case
+parser.error.KW_DEFAULT: default
+parser.error.KW_BREAK: break
+
+parser.error.INTEGER_LITERAL: (integer-literal)
+parser.error.VECTOR_LITERAL: (vector-literal)
+parser.error.TEXT_LITERAL: (text-literal)
+parser.error.IDENTIFIER: (identifier)
