simple annotator; codegen WIP

--- a/files/grammar/mahdl.properties
+++ b/files/grammar/mahdl.properties
@@ -69,3 +69,24 @@ parser.error.INTEGER_LITERAL: (integer-literal)
 parser.error.VECTOR_LITERAL: (vector-literal)
 parser.error.TEXT_LITERAL: (text-literal)
 parser.error.IDENTIFIER: (identifier)
+
+psi.implements.Expression_BinaryAnd: BinaryOperation
+psi.implements.Expression_BinaryConcat: BinaryOperation
+psi.implements.Expression_BinaryDividedBy: BinaryOperation
+psi.implements.Expression_BinaryEqual: BinaryOperation
+psi.implements.Expression_BinaryGreaterThan: BinaryOperation
+psi.implements.Expression_BinaryGreaterThanOrEqual: BinaryOperation
+psi.implements.Expression_BinaryLessThan: BinaryOperation
+psi.implements.Expression_BinaryLessThanOrEqual: BinaryOperation
+psi.implements.Expression_BinaryMinus: BinaryOperation
+psi.implements.Expression_BinaryNotEqual: BinaryOperation
+psi.implements.Expression_BinaryOr: BinaryOperation
+psi.implements.Expression_BinaryPlus: BinaryOperation
+psi.implements.Expression_BinaryRemainder: BinaryOperation
+psi.implements.Expression_BinaryShiftLeft: BinaryOperation
+psi.implements.Expression_BinaryShiftRight: BinaryOperation
+psi.implements.Expression_BinaryTimes: BinaryOperation
+psi.implements.Expression_BinaryXor: BinaryOperation
+psi.implements.Expression_UnaryMinus: UnaryOperation
+psi.implements.Expression_UnaryNot: UnaryOperation
+psi.implements.Expression_UnaryPlus: UnaryOperation
