--- a/files/grammar/mahdl.properties
+++ b/files/grammar/mahdl.properties
@@ -8,9 +8,9 @@ symbol.elementType.class: MahdlElementType
 psi.generate: true
 psi.package: name.martingeisse.mahdl.plugin.input.psi
 psi.utilClass: name.martingeisse.mahdl.plugin.input.psi.PsiUtil
-# psi.supports.psiNameIdentifierOwner: TerminalDeclaration, Production
-# psi.supports.getReference: PrecedenceDeclarationSymbol, Expression_Identifier
-# psi.supports.safeDelete: TerminalDeclaration, Production
+psi.supports.psiNameIdentifierOwner: Module, PortDefinition, SignalLikeDefinition, ModuleInstance
+psi.supports.getReference: QualifiedModuleName, InstancePortName, Expression_Identifier, InstanceReferenceName
+psi.supports.safeDelete: Module, PortDefinition, SignalLikeDefinition, ModuleInstance
 context.parserDefinitionClass: name.martingeisse.mahdl.plugin.input.MahdlParserDefinition
 
 parser.error.OPENING_PARENTHESIS: (
