signal references are now PSI references

--- a/files/grammar/mahdl.properties
+++ b/files/grammar/mahdl.properties
@@ -48,15 +48,20 @@ parser.error.OP_CONCAT: _
 
 parser.error.KW_MODULE: module
 parser.error.KW_INTERFACE: interface
-parser.error.KW_CONST: const
 parser.error.KW_INPUT: input
 parser.error.KW_OUTPUT: output
 parser.error.KW_INOUT: inout
+
+parser.error.KW_CONSTANT: constant
+parser.error.KW_SIGNAL: signal
+parser.error.KW_REGISTER: register
+
 parser.error.KW_BIT: bit
 parser.error.KW_VECTOR: vector
 parser.error.KW_MEMORY: memory
 parser.error.KW_INTEGER: integer
 parser.error.KW_TEXT: text
+
 parser.error.KW_DO: do
 parser.error.KW_IF: if
 parser.error.KW_ELSE: else
