--- a/files/grammar/mahdl.properties
+++ b/files/grammar/mahdl.properties
@@ -8,7 +8,7 @@ symbol.elementType.class: MahdlElementType
 psi.generate: true
 psi.package: name.martingeisse.mahdl.plugin.input.psi
 psi.utilClass: name.martingeisse.mahdl.plugin.input.psi.PsiUtil
-psi.supports.psiNameIdentifierOwner: Module, PortDefinition, SignalLikeDefinition, ImplementationItem_ModuleInstance
+psi.supports.psiNameIdentifierOwner: Module, PortDefinition, SignalLikeDefinition, InstanceName
 psi.supports.getReference: QualifiedModuleName, InstancePortName, Expression_Identifier, InstanceReferenceName
 psi.supports.safeDelete: Module, PortDefinition, SignalLikeDefinition, ImplementationItem_ModuleInstance
 context.parserDefinitionClass: name.martingeisse.mahdl.plugin.input.MahdlParserDefinition
