removed inout ports -- not useful

--- a/files/grammar/mahdl.properties
+++ b/files/grammar/mahdl.properties
@@ -48,9 +48,8 @@ parser.error.OP_CONCAT: _
 
 parser.error.KW_MODULE: module
 parser.error.KW_INTERFACE: interface
-parser.error.KW_INPUT: input
-parser.error.KW_OUTPUT: output
-parser.error.KW_INOUT: inout
+parser.error.KW_IN: in
+parser.error.KW_OUT: out
 
 parser.error.KW_CONSTANT: constant
 parser.error.KW_SIGNAL: signal
