rename memory to matrix, WIP

--- a/files/grammar/mahdl.properties
+++ b/files/grammar/mahdl.properties
@@ -57,7 +57,7 @@ parser.error.KW_REGISTER: register
 
 parser.error.KW_BIT: bit
 parser.error.KW_VECTOR: vector
-parser.error.KW_MEMORY: memory
+parser.error.KW_MATRIX: matrix
 parser.error.KW_INTEGER: integer
 parser.error.KW_TEXT: text
 
