stub for ISE build

--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -34,6 +34,9 @@
         <action id="mapag.generateVerilog" class="name.martingeisse.mahdl.plugin.actions.GenerateVerilogAction" text="generate verilog">
             <add-to-group group-id="ProjectViewPopupMenu" />
         </action>
+        <action id="mapag.generateIseBuild" class="name.martingeisse.mahdl.plugin.ise_build.GenerateIseBuildAction" text="generate ISE build">
+            <add-to-group group-id="ProjectViewPopupMenu" />
+        </action>
     </actions>
 
 </idea-plugin>
