--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -28,6 +28,7 @@
         <lang.braceMatcher language="MAHDL" implementationClass="name.martingeisse.mahdl.plugin.MahdlBraceMatcher" />
         <lang.foldingBuilder language="MAHDL" implementationClass="name.martingeisse.mahdl.plugin.MahdlFoldingBuilder" />
         <lang.commenter language="MAHDL" implementationClass="name.martingeisse.mahdl.plugin.MahdlCommenter" />
+        <fileBasedIndex implementation="name.martingeisse.mahdl.plugin.MahdlModuleIndex" />
     </extensions>
 
     <actions>
