--- a/files/grammar/mahdl.properties
+++ b/files/grammar/mahdl.properties
@@ -47,6 +47,7 @@ parser.error.OP_LESS_THAN_OR_EQUAL: <=
 parser.error.OP_MUX: ?
 parser.error.OP_CONCAT: _
 
+parser.error.KW_NATIVE: native
 parser.error.KW_MODULE: module
 parser.error.KW_INTERFACE: interface
 parser.error.KW_IN: in
