added clock data type to syntax; regenerate

--- a/files/grammar/mahdl.properties
+++ b/files/grammar/mahdl.properties
@@ -62,6 +62,7 @@ parser.error.KW_VECTOR: vector
 parser.error.KW_MATRIX: matrix
 parser.error.KW_INTEGER: integer
 parser.error.KW_TEXT: text
+parser.error.KW_CLOCK: clock
 
 parser.error.KW_DO: do
 parser.error.KW_IF: if
